skills/kubernetes-passive/kubernetes-yaml/resources/daemonset-ref.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: <app>
  # namespace: ""           # Only include Namespace if the user spcified a namespace
  labels:
    app.kubernetes.io/name: <app>
    app.kubernetes.io/version: 1.0.0
spec:
  revisionHistoryLimit: 10
  minReadySeconds: 0
  selector:                 # ALWAYS ust the same labels in metadata.labels, spec.selector and template.metadata.labels
    matchLabels:
      app.kubernetes.io/name: <app>
  updateStrategy:
    type: RollingUpdate     # enum: OnDelete, RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: <app>
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - name: "<app>"
        image: ""
        imagePullPolicy: IfNotPresent
        # command: []                   # Don't override command unless necessary
        # args: []
        # workingDir: ""
        ports:
        - name: "http"                  # always name ports
          containerPort: 80
        resources:
          requests:
            cpu: "10m"
            memory: "128Mi"
          limits:
            # NEVER set CPU limits
            memory: "128Mi"         # Always set requests.memory = limits.memory
        livenessProbe:              # Always have livenessProbe and readinessProbe
          httpGet:
            path: "/healthz"
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: "/ready"
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        lifecycle: {}           # Avoid using LifeCycle Hooks unless there is a good reason
        securityContext:        # ALWAYS configure the SecurityContext
          # runAsUser: 1000     # Only set specific UID when required by the container
          # runAsGroup: 1000    # only set specific GID when required by the container
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          privileged: false
          capabilities:
            add: []
            drop:
            - "ALL"
          seccompProfile:
            type: RuntimeDefault  # -required- enum: Localhost, RuntimeDefault, Unconfined
          appArmorProfile:
            type: RuntimeDefault  # -required- enum: Localhost, RuntimeDefault, Unconfined
        # --- Volume Mounts ---
        volumeMounts:
        - name: "tmp"            # -required-
          mountPath: "/tmp"       # -required-
          readOnly: false     # Set Mountpaths to ReadOnly if you can
        # --- Misc Container ---
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File  # enum: FallbackToLogsOnError, File
            
      initContainers: []  # See `containers`
      ephemeralContainers: []  # See `containers`

      
      serviceAccountName: <app>   # Always create a new ServiceAccount for every DaemonSet
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        fsGroupChangePolicy: OnRootMismatch  # enum: Always, OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
        appArmorProfile:
          type: RuntimeDefault
        # runAsUser: 1000         # Only use specific UIDs and GIDs if required by the container image
        # runAsGroup: 1000
        # fsGroup: 1000
        # supplementalGroups:
        #   - 1000


      nodeSelector: {}
      tolerations:
      - key: ""
        operator: Equal
        value: ""
        effect: NoSchedule
        tolerationSeconds: 300
      restartPolicy: Always       # enum: Always, Never, OnFailure
      terminationGracePeriodSeconds: 30
      enableServiceLinks: false

      volumes:
        - name: "tmp"
          emptyDir: {}
